--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,9 @@
         android:theme="@style/AppTheme">
 
         <!--The manifest entry for our MainActivity. Each Activity requires a manifest entry-->
-        <!-- TODO (5) Use AppTheme.Forecast as the MainActivity's new theme -->
+        <!-- DONE (5) Use AppTheme.Forecast as the MainActivity's new theme -->
         <activity
+            android:theme="@style/AppTheme.Forecast"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop">
